aligned items correctly

--- a/style.css
+++ b/style.css
@@ -5,25 +5,52 @@ body {
     background-color: aqua; 
 }
 
-img{
-    border-top: 2px solid black;    
-    position: absolute;
-    bottom: 8px;
-    left: 16px;
-    font-size: 20px;
-    width: 15rem; 
-    height: auto;
-    text-decoration: overline;
+
+ul{
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    /* align-items: center;  */
+    /* padding-top: 12rem; */
+
 }
 
-.foot.container{
-    
+.foot.container {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    /* align-items: center;  */
+    padding-top: 2rem; 
+    padding-top: 12rem;
+    /* border-bottom: 5rem rgb(0, 0, 0); */
+
 }
 
-.subscribe{
+/* footer{
+    
+  border-bottom: double;
 
-    text-align: left;
+} */
+
+
+.logosubscribe {
+    display: flex;
+    flex-direction: column;
+    /* gap: 1rem;  */
+    /* justify-content: flex-start;  */
+    padding-left: 5rem; 
+    
+}
+
+.image{
+      border-top: double;
+
+    margin-top: 5rem;
+}
+
+
+.subscribe{
+    /* margin-bottom: 5rem; */
+    /* align-self: flex-start; */
+    margin-top: 0.2rem
 }
